feat: Introduce "About" section and improve navigation
Adds a new "About" section to the application and enhances navigation capabilities. This includes:

- Adding an "About" view to the `App` component and its associated icons.
- Implementing deep linking for the "explore" view based on URL hashes for initial load.
- Allowing navigation to the "tools" and "apps" sections with pre-filled search terms.
- Updating Tailwind CSS configuration to include keyframe animations for fading.
- Expanding the `types.ts` file to accommodate richer metadata for Eduapps and Vibecoding Tools, including pricing, hosting, and categories.
- Introducing new icons for enhanced UI functionality.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
       // This configures Tailwind to use class-based dark mode. It MUST come after the main CDN script.
       tailwind.config = {
         darkMode: 'class',
+        theme: {
+          extend: {
+            keyframes: {
+              fadeIn: {
+                '0%': { opacity: 0 },
+                '100%': { opacity: 1 },
+              },
+            },
+            animation: {
+              'fade-in': 'fadeIn 0.3s ease-out',
+            },
+          },
+        },
       }
     </script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
